# spacedc-mdao

./: .gitignore  CHANGELOG.md  CLAUDE.md  EQUATIONS.md  LICENSE  README.md  SPEC.md  mkdocs.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
app/: __init__.py  data.py  tabs.py  theme.py
background_information/: EQUATIONS.md  THEMRAL_RADIATOR_DEEPDIVE.md
docs/: api.md  architecture.md  equations.md  gen_provenance.py  index.md  quickstart.md  streamlit-app.md  tiers.md  vs-mccalip.md  whitepaper.md
examples/: dashboard_app.py
examples/notebooks/: 00_quick_start.ipynb  01_compare.ipynb  02_radiator_feasibility.ipynb  03_pareto_exploration.ipynb  04_monte_carlo_uncertainty.ipynb
examples/scenarios/: earth_constrained_grid.yaml  earth_gas_backed.yaml  earth_hyperscale_baseline.yaml  earth_leased_colo.yaml  earth_renewable_storage.yaml  orbital_1mw_inference.yaml  orbital_mccalip_optimistic.yaml  orbital_multimodal_inference.yaml
scripts/: build_whitepaper_pdf.py  generate_readme_assets.py
src/orbitdc/: __init__.py  calibrate.py  cli.py  compare.py  diagnostics.py  evaluation.py  reporting.py  waterfall.py
src/orbitdc/core/: __init__.py  assumptions.py  catalog_loader.py  constants.py  registry.py  scenario.py  schema.py  units.py
src/orbitdc/data/: __init__.py  accelerators.yaml  batteries.yaml  chip_stacks.yaml  coatings.yaml  comms.yaml  coolants.yaml  cost_structure.yaml  embodied_factors.yaml  launch.yaml  mass_structure.yaml  radiation_env.yaml  radiator_panels.yaml  radiators.yaml  solar_arrays.yaml  workloads.yaml
src/orbitdc/mdao/: __init__.py  problem.py
src/orbitdc/models/: __init__.py  comms_link.py  compute.py  cost.py  earth_baseline.py  environmental.py  formation.py  lasercom.py  mass.py  network.py  orbit.py  orbit_skyfield.py  power.py  radiation.py  reliability.py  rf.py  thermal.py
src/orbitdc/optimize/: __init__.py  design.py  doe.py  pareto.py  robust.py  sensitivity.py  uncertainty.py
src/orbitdc/thermal/: __init__.py  catalog.py  codesign.py  coolant.py  degradation.py  diagnosis.py  network.py  presets.py  radiation.py  surfaces.py  transient.py  validation.py  view_factors.py
src/orbitdc/viz/: __init__.py  dashboard.py  plotly_figures.py  plots.py  provenance.py
tests/: test_assumptions.py  test_cli.py  test_comms.py  test_comms_link.py  test_compare.py  test_degradation.py  test_downlink_regimes.py  test_edge_cases.py  test_fidelity.py  test_formation.py  test_graceful_degradation.py  test_learning_robust.py  test_mccalip_comparison.py  test_mdao.py  test_models.py  test_published_cases.py  test_radiation.py  test_references.py  test_reporting.py  test_skyfield_orbit.py  test_streamlit_app.py  test_thermal.py  test_transient.py  test_view_factors.py  test_viz_plotly.py  test_workloads.py
