[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacedc-mdao"
version = "0.4.2"
description = "Physics-based, provenance-driven feasibility MDAO for orbital data centers vs terrestrial baselines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Hodge" }]
keywords = [
    "mdao",
    "orbital-data-center",
    "space",
    "data-center",
    "feasibility",
    "levelized-cost",
    "lcoc",
    "radiator",
    "thermal",
    "openmdao",
    "trade-study",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pint>=0.23",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Tier-1 RF link-budget backend (opensatcom is John's MIT satcom library).
# Phase 1 rf.py falls back to inline Friis/FSPL when this is not installed.
rf = ["opensatcom>=0.4.0"]
# MDAO + optimization (Phase 2B). PymooDriver needs openmdao >= 3.44.
mdao = ["openmdao>=3.44", "pymoo>=0.6", "SALib>=1.5"]
# Interactive exploration dashboard (Phase 2C).
viz = ["plotly>=6", "panel>=1.9", "networkx>=3", "kaleido>=0.2"]
# Skyfield orbit propagation for ground-station access windows (Phase 2D).
orbit = ["skyfield>=1.54"]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8.0", "types-PyYAML>=6.0"]
# Documentation site (Phase 4D): MkDocs Material + API reference from docstrings.
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Repository = "https://github.com/jman4162/spacedc-mdao"
Documentation = "https://jman4162.github.io/spacedc-mdao/"
Changelog = "https://github.com/jman4162/spacedc-mdao/blob/main/CHANGELOG.md"

[project.scripts]
orbitdc = "orbitdc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitdc"]
# Ship py.typed and the data catalogs to downstream consumers.
artifacts = ["src/orbitdc/py.typed", "src/orbitdc/data/*.yaml"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "opensatcom.*",
    "pint.*",
    "openmdao.*",
    "pymoo.*",
    "SALib.*",
    "panel.*",
    "plotly.*",
    "networkx.*",
    "skyfield.*",
]
ignore_missing_imports = true

# Panel ships py.typed but has untyped functions; the dashboard is thin glue.
[[tool.mypy.overrides]]
module = ["orbitdc.viz.dashboard"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
