[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacedc-mdao"
version = "0.4.2"
description = "Physics-based, provenance-driven feasibility MDAO for orbital data centers vs terrestrial baselines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "John Hodge" }]
keywords = [
    "mdao",
    "orbital-data-center",
    "space",
    "data-center",
    "feasibility",
    "levelized-cost",
    "lcoc",
    "radiator",
    "thermal",
    "openmdao",
    "trade-study",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pint>=0.23",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Tier-1 RF link-budget backend (opensatcom is John's MIT satcom library).
# Phase 1 rf.py falls back to inline Friis/FSPL when this is not installed.
rf = ["opensatcom>=0.4.0"]
# MDAO + optimization (Phase 2B). PymooDriver needs openmdao >= 3.44.
mdao = ["openmdao>=3.44", "pymoo>=0.6", "SALib>=1.5"]
# Interactive exploration dashboard (Phase 2C).
viz = ["plotly>=6", "panel>=1.9", "networkx>=3", "kaleido>=0.2"]
# Streamlit Cloud showcase app (streamlit_app.py). Slim runtime: just the viz
# libraries the figure builders use, no panel/kaleido. Mirrors requirements.txt.
app = ["streamlit>=1.40", "plotly>=6", "networkx>=3"]
# Skyfield orbit propagation for ground-station access windows (Phase 2D).
orbit = ["skyfield>=1.54"]
dev = ["ruff>=0.6", "mypy>=1.10", "pytest>=8.0", "types-PyYAML>=6.0"]
# Documentation site (Phase 4D): MkDocs Material + API reference from docstrings.
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Repository = "https://github.com/jman4162/spacedc-mdao"
Documentation = "https://jman4162.github.io/spacedc-mdao/"
Changelog = "https://github.com/jman4162/spacedc-mdao/blob/main/CHANGELOG.md"

[project.scripts]
orbitdc = "orbitdc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitdc"]
# Ship py.typed and the data catalogs to downstream consumers.
artifacts = ["src/orbitdc/py.typed", "src/orbitdc/data/*.yaml"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "app"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "RUF"]

# The app surfaces unit glyphs (× multiplication sign, ² superscript) in
# user-facing strings; the ambiguous-character checks are noise there.
# (scripts/build_whitepaper_pdf.py handles RUF001 with its own in-file noqa.)
[tool.ruff.lint.per-file-ignores]
"app/*.py" = ["RUF001", "RUF002", "RUF003"]
"streamlit_app.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
# app/data.py (the substantive model glue) is type-checked; the streamlit
# rendering glue (app/tabs.py, app/theme.py, streamlit_app.py) is excluded from
# strict checking below — it is thin presentation over untyped streamlit calls.
files = ["src", "app"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "opensatcom.*",
    "pint.*",
    "openmdao.*",
    "pymoo.*",
    "SALib.*",
    "panel.*",
    "plotly.*",
    "networkx.*",
    "skyfield.*",
    "streamlit.*",
]
ignore_missing_imports = true

# Panel ships py.typed but has untyped functions; the dashboard is thin glue.
# The streamlit rendering modules are the same shape: thin glue over an untyped UI.
[[tool.mypy.overrides]]
module = ["orbitdc.viz.dashboard", "app.tabs", "app.theme"]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Put the repo root on sys.path so the streamlit app's `app` package imports in
# the smoke test (orbitdc itself is installed; `app` lives at the repo root).
pythonpath = ["."]
